Fix left panel spacing

--- a/style.css
+++ b/style.css
@@ -47,9 +47,9 @@ body {
     position: absolute;
     height: 100%;
     width: 100%;
-    background-image: url("/photo.jpg");
+    background: url("/photo.jpg") #CCC;
     background-repeat: no-repeat, no-repeat;
-    background-size: auto 200%;
+    background-size: auto 100%;
     background-position: center top;
     z-index: -1;
 }
@@ -66,11 +66,11 @@ body {
 }
 
 .about .title {
-    position: absolute;
-    bottom: 300px;
-    text-align: center;
     width: 100%;
     padding: 0 10px;
+    text-align: center;
+    position: absolute;
+    bottom: 25%;
 }
 
 .about .title h1, .about .title h2 {
@@ -87,7 +87,9 @@ body {
 }
 
 header {
-    margin: 36px;
+    position: absolute;
+    top: 36px;
+    left: 36px;
     height: 100px;
 }
 
